Summary of changes for version 2.1.x:
------------------------------------

  * If you are using GNU Emacs 19.34 or earlier, you will need to add
    the following code to your ~/.emacs file in order to use Emacs
    Octave mode:

      ;; Set up the custom library.
      ;; taken from http://www.dina.kvl.dk/~abraham/custom/
      (eval-and-compile
	(condition-case ()
	    (require 'custom)
	  (error nil))
	(if (and (featurep 'custom) (fboundp 'custom-declare-variable))
	    nil ;; We've got what we needed
	  ;; We have the old custom-library, hack around it!
	  (defmacro defgroup (&rest args)
	    nil)
	  (defmacro defcustom (var value doc &rest args) 
	    (` (defvar (, var) (, value) (, doc))))))

  * When `format +' is in effect, Octave uses the following symbols to
    provide more information about the values in a matrix:

      +      postive real
      -      negative real
      i      pure imaginary
      c      complex
      blank  zero

  * The ++ and -- operators now work for indexed matrices, and the
    following operators now work:

      +=, -=, *=, /=, \=, <<=, >>=, .*=, ./=, .\=, &=, |=

    These operators are currently implemented using a relatively
    inefficient brute-force method but hey, they work.

  * The built-in variable argv is now a list of strings instead of a
    string vector.

  * The value of LOADPATH set by the environment variable
    OCTAVE_PATH, the -p or --path command line options, or on the
    command line is no longer modified to include the default path.
    Instead it is left as specified.  Its default value is now ":",
    which tells Octave to search the default path, and the new
    built-in variable DEFAULT_LOADPATH contains the default list of
    directories to search.  

  * The function file_in_path no longer does any special processing of
    its PATH argument.  To search LOADPATH for files, it is now
    generally better to use the new function file_in_loadpath.
